# perf-counter-monitor

./: .clang-format  .clang-tidy  CMakeLists.txt
.github/workflows/: build-analyze.yaml
src/: main.cpp  perf.cpp  perf.hpp
